--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jspdf": "^3.0.2",
     "lucide-react": "^0.475.0",
     "next": "^15.5.3",
+    "node-nmap": "^4.0.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
