solved csp error

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,12 @@
   command = "npm run build"
   publish = ".next"
   functions = ".netlify/functions"
+  image = "ubuntu-20.04"  # Use Ubuntu 20.04 which has Nmap available in the package manager
 
 [build.environment]
   NEXT_TELEMETRY_DISABLED = "1"
   NETLIFY_NEXT_PLUGIN_SKIP = "false"
+  NODE_VERSION = "16"  # Specify Node.js version
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
