--- a/netlify.toml
+++ b/netlify.toml
@@ -18,36 +18,7 @@
   publish = ".next"
   targetPort = 3000
 
-# Security headers
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Content-Type-Options = "nosniff"
-    X-Frame-Options = "SAMEORIGIN"
-    X-XSS-Protection = "1; mode=block"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
-    X-DNS-Prefetch-Control = "on"
-    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-    
-    # Content Security Policy
-    Content-Security-Policy = """
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' 'strict-dynamic' https: http: https://nrecon.netlify.app;
-      script-src-elem 'self' 'unsafe-inline' https://nrecon.netlify.app;
-      style-src 'self' 'unsafe-inline' https: http:;
-      style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://nrecon.netlify.app;
-      font-src 'self' data: blob: https://fonts.gstatic.com https://nrecon.netlify.app;
-      img-src 'self' data: blob: https: http:;
-      connect-src 'self' https: http: wss: https://nrecon.netlify.app;
-      frame-src 'self' https://nrecon.netlify.app;
-      media-src 'self' blob: data: https: http:;
-      object-src 'none';
-      base-uri 'self';
-      form-action 'self';
-      frame-ancestors 'none';
-      upgrade-insecure-requests;
-    """.replace(/\s+/g, ' ').trim()
+# Security headers are now managed in src/middleware.ts
 
 [[redirects]]
   from = "/*"
