--- a/package.json
+++ b/package.json
@@ -60,10 +60,15 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@emotion/babel-plugin": "^11.13.5",
     "@netlify/plugin-nextjs": "^5.13.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^10.0.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
